--- a/config/config.yaml
+++ b/config/config.yaml
@@ -61,31 +61,37 @@ notification:
 
 # 用于让关注度更高的新闻在更前面显示，即用算法重新组合不同平台的热搜排序形成你侧重的热搜，合起来是 1 就行
 weight:
-  rank_weight: 0.6 # 排名权重
-  frequency_weight: 0.3 # 频次权重
+  rank_weight: 0.8 # 排名权重
+  frequency_weight: 0.1 # 频次权重
   hotness_weight: 0.1 # 热度权重
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
-  - id: "toutiao"
+  - id: "https://www.toutiao.com/"
     name: "今日头条"
-  - id: "baidu"
+  - id: "https://news.baidu.com/"
     name: "百度热搜"
-  - id: "wallstreetcn-hot"
+  - id: "https://wallstreetcn.com/"
     name: "华尔街见闻"
-  - id: "thepaper"
+  - id: "https://www.thepaper.cn/"
     name: "澎湃新闻"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
-  - id: "cls-hot"
-    name: "财联社热门"
-  - id: "ifeng"
+  - id: "https://www.cls.cn/"
+    name: "财联社"
+  - id: "https://www.ifeng.com/"
     name: "凤凰网"
-  - id: "tieba"
-    name: "贴吧"
-  - id: "weibo"
+  - id: "https://weibo.com/"
     name: "微博"
   - id: "douyin"
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+  - id: "36ke"
+    name: "36氪"
+  - id: "people"
+    name: "人民日报"
+  - id: "ipaper"
+    name: "经济日报"
+  - id: "stdaily"
+    name: "中国科技网" 
+  - id: "https://news.qq.com/"
+    name: "腾讯网"     
