--- a/config/config.yaml
+++ b/config/config.yaml
@@ -41,7 +41,7 @@ notification:
     time_range:
       start: "20:00"  # 推送时间范围开始（北京时间）
       end: "22:00"    # 推送时间范围结束（北京时间）
-    once_per_day: true  # 每天在时间范围内只推送一次，如果 false，则时间范围内每次执行都推送一次
+    once_per_day: false  # 每天在时间范围内只推送一次，如果 false，则时间范围内每次执行都推送一次
     push_record_retention_days: 7  # 推送记录保留天数
 
   # 请务必妥善保管好 webhooks，不要公开
@@ -61,9 +61,9 @@ notification:
 
 # 用于让关注度更高的新闻在更前面显示，即用算法重新组合不同平台的热搜排序形成你侧重的热搜，合起来是 1 就行
 weight:
-  rank_weight: 0.8 # 排名权重
-  frequency_weight: 0.1 # 频次权重
-  hotness_weight: 0.1 # 热度权重
+  rank_weight: 0.3 # 排名权重
+  frequency_weight: 0.3 # 频次权重
+  hotness_weight: 0.4 # 热度权重
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
