--- a/config/config.yaml
+++ b/config/config.yaml
@@ -67,31 +67,25 @@ weight:
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
-  - id: "https://www.toutiao.com/"
+  - id: "toutiao"
     name: "今日头条"
-  - id: "https://news.baidu.com/"
+  - id: "baidu"
     name: "百度热搜"
-  - id: "https://wallstreetcn.com/"
+  - id: "wallstreetcn-hot"
     name: "华尔街见闻"
-  - id: "https://www.thepaper.cn/"
+  - id: "thepaper"
     name: "澎湃新闻"
-  - id: "https://www.cls.cn/"
-    name: "财联社"
-  - id: "https://www.ifeng.com/"
+  - id: "bilibili-hot-search"
+    name: "bilibili 热搜"
+  - id: "cls-hot"
+    name: "财联社热门"
+  - id: "ifeng"
     name: "凤凰网"
-  - id: "https://weibo.com/"
+  - id: "tieba"
+    name: "贴吧"
+  - id: "weibo"
     name: "微博"
   - id: "douyin"
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
-  - id: "36ke"
-    name: "36氪"
-  - id: "people"
-    name: "人民日报"
-  - id: "ipaper"
-    name: "经济日报"
-  - id: "stdaily"
-    name: "中国科技网" 
-  - id: "https://news.qq.com/"
-    name: "腾讯网"     
